--- a/room.html
+++ b/room.html
@@ -21,7 +21,7 @@
                         <path d="M24 19h-24v-1h24v1zm0-6h-24v-1h24v1zm0-6h-24v-1h24v1z" />
                 </svg>
             </button>
-            <a href="lobby.html" />
+            <a href="index.html" />
             <h3 id="logo">
                 <img src="images/OnlyLogo.png" alt="Site Logo">
                 <span>Instant Wave</span>
@@ -35,7 +35,7 @@
                     <path
                         d="M24 20h-3v4l-5.333-4h-7.667v-4h2v2h6.333l2.667 2v-2h3v-8.001h-2v-2h4v12.001zm-15.667-6l-5.333 4v-4h-3v-14.001l18 .001v14h-9.667zm-6.333-2h3v2l2.667-2h8.333v-10l-14-.001v10.001z" />
                 </svg></button>
-            <a class="nav__link" id="create__room__btn" href="lobby.html">
+            <a class="nav__link" id="create__room__btn" href="index.html">
                 Create Room
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#ede0e0" viewBox="0 0 24 24">
                     <path
