--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="nav--list">
             <a href="index.html" />
             <h3 id="logo">
-                <img src="./images/logo.png" alt="Site Logo">
+                <img src="./images/OnlyLogo.png" alt="Site Logo">
                 <span>Instant Wave</span>
             </h3>
             </a>
